# PAHS_LLM

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pymarkdownlnt  CHANGELOG.md  COMPLETE_METHODS_SECTION.md  CONTRIBUTING.md  DASHBOARD_ENHANCEMENTS.md  ENHANCEMENT_SUMMARY.md  INTER_RATER_FORM_TEMPLATE.md  INTER_RATER_RATING_GUIDE.md  LICENSE  METHODS_IMPLEMENTATION_GUIDE.md  METHODS_SECTION_DRAFT.md  MODEL_REFINEMENT_GUIDE.md  Makefile  OPENSOURCE_MODEL_SETUP.md  PHASE4_EXCEL_DELIVERY_SUMMARY.md  PHASE4_EXCEL_MATERIALS_GUIDE.md  PHASE4_FILE_INDEX.md  PHASE4_IMPLEMENTATION_GUIDE.md  PROPOSAL_ALIGNMENT.md  README.md  REFERENCES_LIBRARY.md  STUDY_COMPLETION_CHECKLIST.md  analyze_gemini.py  dashboard.py  dashboard_requirements.txt  detailed_hallucination_analysis.py  main.py  pilot.py  pilot_output.txt  pyproject.toml  recover_7_cases.py  requirements-dev.txt  requirements.txt
04_results/: PAHS_LLM_Methods_2026.docx
Phase4_InterRater_ExcelSheets/: INDEX.md  INTER_RATER_RATING_GUIDE.md  PAHS_IRR_RaterB_Template.xlsx  PHASE4_EXCEL_MATERIALS_GUIDE.md  PRACTICE_CASES_FOR_RATER_CALIBRATION.md  RATER_QUICK_REFERENCE_CARD.md  README_Phase4.md  phase4-guide.md
docs/: architecture.md  dashboard.md  project-structure.md  quick-start.md
scripts/: analyze_interrater_agreement.py  calculate_cohens_kappa.py  calculate_kappa_4raters.py  convert_instructions_to_word.py  convert_methods_to_word.py  final_validation.py  generate_interrater_excel.py  generate_interrater_rating_excel.py  generate_interrater_subset.py  generate_master_sheets.py  generate_master_sheets_400.py  generate_rater_excel_sheets.py  generate_rater_sample_100.py  generate_rater_sample_400.py  (+9 more)
(+229 files in other folders)
